--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
     "main": "index.js",
     "license": "MIT",
     "dependencies": {
-        "apn": "^2.1.5"
+        "apn": "^2.1.5",
+        "ejs": "^2.5.7",
+        "express": "^4.15.4"
     },
     "scripts": {
-        "start": "nodemon --exec node  -- app.js"
+        "start": "node app.js"
     },
     "devDependencies": {
         "nodemon": "^1.12.1"
